增加父类定义的方法或者属性的获取